vfs_streams_xattr: initialize pointer

Intitialize pointer to NULL, otherwise we talloc_free() an unitialized
pointer in the error code path.

Backport of 1076e4e4e2a2b6238116bd860b03a9dcc8a151f8 from master.
https://bugzilla.samba.org/show_bug.cgi?id=10971

Signed-off-by: Ralph Boehme <slow@samba.org>